--- a/css/styles.css
+++ b/css/styles.css
@@ -161,7 +161,7 @@ p {
     #title {
         text-align: center;
     }
-    .title-image {
+    .title-img {
         position: static;
         transform: rotate(0);
     }
